# DockerDevelopmentSkelton

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
src/app1/: Dockerfile
src/app2/: Dockerfile  manage.py  pyproject.toml
src/app2/dev/: dev-django.sh  dev_without_attach.cmd
src/app_scrapping/: Dockerfile  local_dev.cmd  manage.py
src/app_scrapping/entry/: run.sh
